--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-version: '3.8'
+version: "3.9"
 
 services:
-  # ---------------------------------------------------
-  # 1. KAFKA & ITS KEEPER (Zookeeper)
-  # ---------------------------------------------------
+  # ================================
+  # 1) ZooKeeper for Kafka
+  # ================================
   kafka-keeper:
     image: confluentinc/cp-zookeeper:7.5.0
-    hostname: kafka-keeper
     container_name: kafka-keeper
     ports:
       - "2181:2181"
@@ -14,91 +13,122 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
+  # ================================
+  # 2) Kafka Broker
+  # ================================
   kafka:
     image: confluentinc/cp-kafka:7.5.0
-    hostname: kafka
     container_name: kafka
-    ports:
-      - "9092:9092"    # Internal Docker port (for ClickHouse Kafka Engine)
-      - "29092:29092"  # External port (for our Python producer.py)
     depends_on:
-      - kafka-keeper
+      kafka-keeper:
+        condition: service_started
+    ports:
+      - "9092:9092"
+      - "29092:29092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'kafka-keeper:2181'
+      KAFKA_ZOOKEEPER_CONNECT: "kafka-keeper:2181"
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
 
-  # ---------------------------------------------------
-  # 2. CLICKHOUSE CLUSTER & ITS KEEPER
-  # ---------------------------------------------------
+  # ================================
+  # 3) ClickHouse Keeper
+  # ================================
   clickhouse-keeper:
-    image: clickhouse/clickhouse-keeper:24.3-alpine
-    hostname: clickhouse-keeper
+    image: clickhouse/clickhouse-keeper:24.3
     container_name: clickhouse-keeper
+    entrypoint: ["/usr/bin/clickhouse-keeper"]
+    command: ["--config-file=/etc/clickhouse-keeper/keeper.xml"]
+    volumes:
+      - ./config/clickhouse/keeper_config.xml:/etc/clickhouse-keeper/keeper.xml
     ports:
       - "9181:9181"
-    volumes:
-      - ./config/clickhouse/keeper_config.xml:/etc/clickhouse-keeper/keeper_config.xml
+      - "9444:9444"
+    healthcheck:
+      test: ["CMD-SHELL", "echo ruok | nc localhost 9181"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
-  clickhouse-01: # Shard 1, Replica 1
-    image: clickhouse/clickhouse-server:24.3-alpine
-    hostname: clickhouse-01
+  # ================================
+  # 4) ClickHouse Server – SHARD 1
+  # ================================
+  clickhouse-01:
+    image: clickhouse/clickhouse-server:24.3
     container_name: clickhouse-01
-    ports:
-      - "8123:8123" # HTTP port for API
-      - "9000:9000" # Native client port
     depends_on:
-      - clickhouse-keeper
+      clickhouse-keeper:
+        condition: service_started
+    ports:
+      - "8123:8123"
+      - "9000:9000"
     volumes:
-      - ./config/clickhouse/server_config.xml:/etc/clickhouse-server/config.xml
-      - ./config/clickhouse/metrika.xml:/etc/clickhouse-server/config.xml.d/metrika.xml
-    # This 'macros' section defines the unique identity for this node
+      - ./config/clickhouse/server_config.xml:/etc/clickhouse-server/config.d/server_config.xml
+      - ./config/clickhouse/metrika.xml:/etc/clickhouse-server/config.d/metrika.xml
+      - ./config/clickhouse/users.xml:/etc/clickhouse-server/users.d/users.xml
+      - clickhouse-data-01:/var/lib/clickhouse
     environment:
-      - CLICKHOUSE_MACROS_SHARD: 1
-      - CLICKHOUSE_MACROS_REPLICA: 1
+      CLICKHOUSE_DB: default
+      CLICKHOUSE_USER: default
+      CLICKHOUSE_PASSWORD: ""
+    healthcheck:
+      test: ["CMD", "clickhouse-client", "--query=SELECT 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
-  clickhouse-02: # Shard 2, Replica 1
-    image: clickhouse/clickhouse-server:24.3-alpine
-    hostname: clickhouse-02
+  # ================================
+  # 5) ClickHouse Server – SHARD 2
+  # ================================
+  clickhouse-02:
+    image: clickhouse/clickhouse-server:24.3
     container_name: clickhouse-02
-    ports:
-      - "8124:8123" # Map to host port 8124 to avoid conflict
-      - "9001:9000" # Map to host port 9001
     depends_on:
-      - clickhouse-keeper
+      clickhouse-keeper:
+        condition: service_started
+    ports:
+      - "8124:8123"
+      - "9001:9000"
     volumes:
-      - ./config/clickhouse/server_config.xml:/etc/clickhouse-server/config.xml
-      - ./config/clickhouse/metrika.xml:/etc/clickhouse-server/config.xml.d/metrika.xml
-    # This 'macros' section defines the unique identity for this node
+      - ./config/clickhouse/server_config.xml:/etc/clickhouse-server/config.d/server_config.xml
+      - ./config/clickhouse/metrika.xml:/etc/clickhouse-server/config.d/metrika.xml
+      - ./config/clickhouse/users.xml:/etc/clickhouse-server/users.d/users.xml
+      - clickhouse-data-02:/var/lib/clickhouse
     environment:
-      - CLICKHOUSE_MACROS_SHARD: 2
-      - CLICKHOUSE_MACROS_REPLICA: 1
-  
-  # ---------------------------------------------------
-  # 3. AUTO-INIT SERVICE FOR CLICKHOUSE SCHEMA
-  # ---------------------------------------------------
+      CLICKHOUSE_DB: default
+      CLICKHOUSE_USER: default
+      CLICKHOUSE_PASSWORD: ""
+    healthcheck:
+      test: ["CMD", "clickhouse-client", "--query=SELECT 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+
+  # ================================
+  # 6) Auto Schema Initializer
+  # ================================
   clickhouse-init:
-    image: clickhouse/clickhouse-client:24.3-alpine
+    image: clickhouse/clickhouse-server:24.3
     container_name: clickhouse-init
-    # This service will run only once, after clickhouse-01 is healthy
-    depends_on: 
+    depends_on:
       clickhouse-01:
-        condition: service_started
+        condition: service_healthy
       clickhouse-02:
-        condition: service_started
+        condition: service_healthy
     volumes:
-      - ./sql_schema:/docker-entrypoint-initdb.d
-    # This command executes all .sql files in the mounted folder
-    # in alphabetical order against the 'clickhouse-01' node.
-    # The 'distributed_ddl' config will replicate the schema to node-02.
-    command: 
-      - "client"
-      - "--host"
-      - "clickhouse-01"
-      - "--multiquery"
-      - "--database"
-      - "default"
+      - ./sql_schema:/sql
+    entrypoint: ["/bin/bash", "-c"]
+    command: |
+      echo "✅ Initializing ClickHouse schema..."
+      sleep 2
+      for f in /sql/*.sql; do
+        echo "➡️ Running $$f"
+        clickhouse-client --host clickhouse-01 --multiquery < "$$f"
+      done
+      echo "✅ Schema loaded."
+
+volumes:
+  clickhouse-data-01:
+  clickhouse-data-02:
