--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,134 +1,86 @@
 version: "3.9"
 
 services:
-  # ================================
-  # 1) ZooKeeper for Kafka
-  # ================================
+  clickhouse-keeper:
+    image: clickhouse/clickhouse-keeper:24.3
+    container_name: clickhouse-keeper
+    ports:
+      - "9181:9181"
+      - "9444:9444"
+    volumes:
+      - clickhouse-keeper-data:/var/lib/clickhouse-keeper
+      - clickhouse-keeper-logs:/var/log/clickhouse-keeper
+      - ./config/clickhouse/keeper.xml:/etc/clickhouse-keeper/keeper.xml
+    restart: always
+
   kafka-keeper:
     image: confluentinc/cp-zookeeper:7.5.0
     container_name: kafka-keeper
-    ports:
-      - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    restart: always
 
-  # ================================
-  # 2) Kafka Broker
-  # ================================
   kafka:
     image: confluentinc/cp-kafka:7.5.0
     container_name: kafka
     depends_on:
-      kafka-keeper:
-        condition: service_started
+      - kafka-keeper
     ports:
-      - "9092:9092"
-      - "29092:29092"
+      - "9092:9092"       # internal broker listener
+      - "29092:29092"     # external listener (Windows host MUST use this)
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: "kafka-keeper:2181"
+      KAFKA_ZOOKEEPER_CONNECT: kafka-keeper:2181
+
+      # Listener mapping
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_HOST://0.0.0.0:29092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    restart: always
 
-  # ================================
-  # 3) ClickHouse Keeper
-  # ================================
-  clickhouse-keeper:
-    image: clickhouse/clickhouse-keeper:24.3
-    container_name: clickhouse-keeper
-    entrypoint: ["/usr/bin/clickhouse-keeper"]
-    command: ["--config-file=/etc/clickhouse-keeper/keeper.xml"]
-    volumes:
-      - ./config/clickhouse/keeper_config.xml:/etc/clickhouse-keeper/keeper.xml
-    ports:
-      - "9181:9181"
-      - "9444:9444"
-    healthcheck:
-      test: ["CMD-SHELL", "echo ruok | nc localhost 9181"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
-
-  # ================================
-  # 4) ClickHouse Server – SHARD 1
-  # ================================
   clickhouse-01:
     image: clickhouse/clickhouse-server:24.3
     container_name: clickhouse-01
     depends_on:
-      clickhouse-keeper:
-        condition: service_started
+      - clickhouse-keeper
     ports:
       - "8123:8123"
       - "9000:9000"
     volumes:
-      - ./config/clickhouse/server_config.xml:/etc/clickhouse-server/config.d/server_config.xml
-      - ./config/clickhouse/metrika.xml:/etc/clickhouse-server/config.d/metrika.xml
-      - ./config/clickhouse/users.xml:/etc/clickhouse-server/users.d/users.xml
       - clickhouse-data-01:/var/lib/clickhouse
-    environment:
-      CLICKHOUSE_DB: default
-      CLICKHOUSE_USER: default
-      CLICKHOUSE_PASSWORD: ""
-    healthcheck:
-      test: ["CMD", "clickhouse-client", "--query=SELECT 1"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
+      - ./config/clickhouse/config.xml:/etc/clickhouse-server/config.xml
+    restart: always
 
-  # ================================
-  # 5) ClickHouse Server – SHARD 2
-  # ================================
   clickhouse-02:
     image: clickhouse/clickhouse-server:24.3
     container_name: clickhouse-02
     depends_on:
-      clickhouse-keeper:
-        condition: service_started
+      - clickhouse-keeper
     ports:
       - "8124:8123"
       - "9001:9000"
     volumes:
-      - ./config/clickhouse/server_config.xml:/etc/clickhouse-server/config.d/server_config.xml
-      - ./config/clickhouse/metrika.xml:/etc/clickhouse-server/config.d/metrika.xml
-      - ./config/clickhouse/users.xml:/etc/clickhouse-server/users.d/users.xml
       - clickhouse-data-02:/var/lib/clickhouse
-    environment:
-      CLICKHOUSE_DB: default
-      CLICKHOUSE_USER: default
-      CLICKHOUSE_PASSWORD: ""
-    healthcheck:
-      test: ["CMD", "clickhouse-client", "--query=SELECT 1"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
+      - ./config/clickhouse/config.xml:/etc/clickhouse-server/config.xml
+    restart: always
 
-  # ================================
-  # 6) Auto Schema Initializer
-  # ================================
   clickhouse-init:
     image: clickhouse/clickhouse-server:24.3
     container_name: clickhouse-init
     depends_on:
-      clickhouse-01:
-        condition: service_healthy
-      clickhouse-02:
-        condition: service_healthy
+      - clickhouse-01
+      - clickhouse-02
     volumes:
-      - ./sql_schema:/sql
-    entrypoint: ["/bin/bash", "-c"]
-    command: |
-      echo "✅ Initializing ClickHouse schema..."
-      sleep 2
-      for f in /sql/*.sql; do
-        echo "➡️ Running $$f"
-        clickhouse-client --host clickhouse-01 --multiquery < "$$f"
-      done
-      echo "✅ Schema loaded."
+      - ./config/clickhouse/init_cluster.sql:/docker-entrypoint-initdb.d/init_cluster.sql
+    entrypoint: ["/bin/true"]
 
 volumes:
+  clickhouse-keeper-data:
+  clickhouse-keeper-logs:
   clickhouse-data-01:
   clickhouse-data-02:
